finished form page along with styling, going to projects now

--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Home.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="http://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
@@ -20,12 +20,12 @@
         </div>
         <div>
           <ul class="nav-bar-list">
-            <li><a class="nav-bar-list-item" href="form.html"> Form </a></li>
+            <li><a class="nav-bar-list-item" href="Form.html"> Form </a></li>
             <li>
-              <a class="nav-bar-list-item" href="Images.html"> Projects </a>
+              <a class="nav-bar-list-item" href="Projects.html"> Projects </a>
             </li>
             <li>
-              <a class="nav-bar-list-item" href="About.html"> History </a>
+              <a class="nav-bar-list-item" href="Social.html"> Social </a>
             </li>
           </ul>
         </div>
