finished social page and going onto projects gallery

--- a/Social.html
+++ b/Social.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects Gallery</title>
-    <link rel="stylesheet" href="style.css" />
 
+    <link rel="stylesheet" href="style.css" />
     <link
       href="http://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
       type="text/css"
     />
+    <title>Social Links Collection</title>
   </head>
-  <body>
+  <body class="social-icon-body">
     <header>
       <nav class="nav-bar">
         <div class="logo-container">
@@ -32,5 +32,29 @@
         </div>
       </nav>
     </header>
+    <div class="social-icon-list-wrapper">
+      <h1>Social Links:</h1>
+      <ul class="social-icon-list">
+        <li>
+          <a href="https://linkedin.com"
+            ><i class="sprite sprite-linkedin"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://indeed.com"><i class="sprite sprite-indeed"></i></a>
+        </li>
+        <li>
+          <a href="https://github.com"><i class="sprite sprite-github"></i></a>
+        </li>
+        <li>
+          <a href="https://gmail.com"><i class="sprite sprite-email"></i></a>
+        </li>
+        <li>
+          <a href="https://discord.com"
+            ><i class="sprite sprite-discord"></i
+          ></a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
