added new projects page and encountered bug, images not showing up

--- a/Projects.html
+++ b/Projects.html
@@ -32,5 +32,34 @@
         </div>
       </nav>
     </header>
+    <div>
+      <h1>Projects Gallery:</h1>
+    </div>
+    <div class="project-gallery">
+      <div>
+        <h2>First Complete Project: Password Generator</h2>
+        <img href="password-generator-project.png" class="project-image" />
+      </div>
+      <div>
+        <h2>Favorite Project: Recursive Fibbonaci:</h2>
+        <img href="fibonnaci-finder-project.png" class="project-image" />
+      </div>
+      <div>
+        <h2>Second Favorite: Find prime factors in a range:</h2>
+        <img href="prime-finder-project.png" class="project-image" />
+      </div>
+      <div>
+        <h2>First Wireframe Project:</h2>
+        <img href="wireframe-spec-project.png" class="project-image" />
+      </div>
+      <div>
+        <h2>First HTML form Project:</h2>
+        <img href="html-form-project.png" class="project-image" />
+      </div>
+      <div>
+        <h2>Coolest OOP Project:</h2>
+        <img href="cool-oop-project.png" class="project-image" />
+      </div>
+    </div>
   </body>
 </html>
