fixed image bugs and added links and new functionality

--- a/Projects.html
+++ b/Projects.html
@@ -38,27 +38,39 @@
     <div class="project-gallery">
       <div>
         <h2>First Complete Project: Password Generator</h2>
-        <img href="password-generator-project.png" class="project-image" />
+        <a href="password-generator-project.png" target="_blank">
+          <img src="password-generator-project.png" class="project-image" />
+        </a>
       </div>
       <div>
         <h2>Favorite Project: Recursive Fibbonaci:</h2>
-        <img href="fibonnaci-finder-project.png" class="project-image" />
+        <a href="fibonnaci-finder-project.png" target="_blank">
+          <img src="fibonnaci-finder-project.png" class="project-image" />
+        </a>
       </div>
       <div>
         <h2>Second Favorite: Find prime factors in a range:</h2>
-        <img href="prime-finder-project.png" class="project-image" />
+        <a href="prime-finder-project.png" target="_blank">
+          <img src="prime-finder-project.png" class="project-image" />
+        </a>
       </div>
       <div>
         <h2>First Wireframe Project:</h2>
-        <img href="wireframe-spec-project.png" class="project-image" />
+        <a href="wireframe-spec-project.png" target="_blank">
+          <img src="wireframe-spec-project.png" class="project-image" />
+        </a>
       </div>
       <div>
         <h2>First HTML form Project:</h2>
-        <img href="html-form-project.png" class="project-image" />
+        <a href="html-form-project.png" target="_blank">
+          <img src="html-form-project.png" class="project-image" />
+        </a>
       </div>
       <div>
         <h2>Coolest OOP Project:</h2>
-        <img href="cool-oop-project.png" class="project-image" />
+        <a href="cool-oop-project.png" target="_blank">
+          <img src="cool-oop-project.png" class="project-image" />
+        </a>
       </div>
     </div>
   </body>
